--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         // I removed the "mystery" setting. All photos will show normally.
         const slides = [
             { 
-                img: "pic_notification.jpg", 
+                img: "pic4.png", 
                 caption: "You are my favorite notification 📱❤️" 
             },
             { 
@@ -240,7 +240,7 @@
                 caption: "Our most precious memory together 🌟"
             },
             { 
-                img: "pic1.jpg", 
+                img: "pic1.png", 
                 caption: "I love you more than words can say 💖" 
             }
         ];
