--- a/index.html
+++ b/index.html
@@ -251,11 +251,11 @@
     <script>
         // --- CONFIGURATION ---
         const slides = [
-            { img: "pic_notification.jpg", caption: "You are my favorite notification 📱❤️" },
-            { img: "pic_mystery.jpg", caption: "You are full of surprises! 🎁" },
-            { img: "pic2.jpg", caption: "Your smile is my daily motivation ✨" },
-            { img: "pic3.jpg", caption: "Our most precious memory together 🌟" },
-            { img: "pic1.jpg", caption: "I love you more than words can say 💖" }
+            { img: "pic1.png", caption: "I love you more than words can say 💖" },
+            { img: "pic2.jpg", caption: "You are full of surprises! 🎁" },
+            { img: "pic3.jpg", caption: "Your smile is my daily motivation ✨" },
+            { img: "pic4.png", caption: "Our most precious memory together 🌟" },
+            { img: "pic5.jpg", caption: "You are my favorite notification 📱❤️" }
         ];
 
         let currentSlide = 0;
