--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                 caption: "Our most precious memory together 🌟"
             },
             { 
-                img: "pic5.jpg", 
+                img: "pic5.png", 
                 caption: "You are my favorite notification 📱❤️" 
             }
         ];
