--- a/index.html
+++ b/index.html
@@ -218,32 +218,17 @@
     </div>
 
     <script>
-        // --- CONFIGURATION ---
-        
-        // Ensure these filenames match your uploads EXACTLY.
-        // I removed the "mystery" setting. All photos will show normally.
-        const slides = [
-            { 
-                img: "pic1.png", 
-                caption: "I love you more than words can say 💖" 
-            },
-            { 
-                img: "pic2.jpg", // Formerly mystery, now normal
-                caption: "You are full of surprises! 🎁" 
-            },
-            { 
-                img: "pic3.jpg", 
-                caption: "Your smile is my daily motivation ✨" 
-            },
-            { 
-                img: "pic4.png", 
-                caption: "Our most precious memory together 🌟"
-            },
-            { 
-                img: "pic5.png", 
-                caption: "You are my favorite notification 📱❤️" 
-            }
-        ];
+       // --- CONFIGURATION ---
+const slides = [
+    { img: "pic1.png", caption: "I love you more than words can say 💖" },
+    { img: "pic2.jpg", caption: "You are full of surprises! 🎁" },
+    { img: "pic3.jpg", caption: "Your smile is my daily motivation ✨" },
+    { img: "pic4.png", caption: "Our most precious memory together 🌟" },
+    { img: "pic5.png", caption: "You are my favorite notification 📱❤️" },
+    { img: "pic6.png", caption: "Every moment with you is a treasure 💎" },
+    { img: "pic7.png", caption: "My heart is wherever you are 🏠❤️" },
+    { img: "pic8.png", caption: "To many more years of us! 🥂" }
+];
 
         let currentSlide = 0;
         const bgMusic = document.getElementById('bgMusic');
