--- a/index.html
+++ b/index.html
@@ -403,11 +403,11 @@
             }, 300);
         }
 
-        // --- ENVELOPE & LETTER ANIMATION ---
+       // --- ENVELOPE & LETTER ANIMATION (FIXED) ---
         function startLetterAnimation() {
             // 1. Start Petals
             const container = document.getElementById('petals-container');
-            const roseTypes = ['🌹', '🌺', '🥀', '🌸']; 
+            const roseTypes = ['🌺', '🌸']; 
             
             const createPetal = () => {
                 const el = document.createElement('div');
@@ -450,14 +450,19 @@
                 duration: 1.5,
                 ease: "power3.out"
             }, "+=0.2")
-            // D. Fade out Envelope elements
-            .to(["#envelope", "#flap", "#pocket"], {
+            // D. Fade out Envelope elements (THE FIX IS HERE)
+            // We fade out the flap and pocket, but for the envelope container, 
+            // we only fade the background color, not the whole div.
+            .to(["#flap", "#pocket"], {
                 opacity: 0,
-                duration: 0.5,
-                pointerEvents: "none"
-            }, "-=1.0");
+                duration: 0.5
+            }, "-=1.0")
+            .to("#envelope", {
+                backgroundColor: "rgba(190, 18, 60, 0)", // Fade red to transparent
+                boxShadow: "0 0 0 rgba(0,0,0,0)",        // Remove shadow
+                duration: 0.5
+            }, "<"); // Run at same time as previous animation
         }
-
         // --- BACKGROUND HEARTS ---
         function initHearts() {
             const container = document.getElementById('hearts-container');
