--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
         // --- FIXED LETTER ANIMATION ---
         function startLetterAnimation() {
             const container = document.getElementById('petals-container');
-            const roseTypes = ['🌹', '🌺', '🥀', '🌸']; 
+            const roseTypes = ['🌺', '🌸']; 
             
             const createPetal = () => {
                 const el = document.createElement('div');
