--- a/index.html
+++ b/index.html
@@ -219,14 +219,13 @@
         </button>
     </div>
 
-   <div id="screen-2" class="section bg-wish text-center px-4">
+    <div id="screen-2" class="section bg-wish text-center px-4">
         <h1 class="text-5xl md:text-7xl font-dancing font-bold text-pink-700 mb-4 scale-0 leading-tight" id="wish-title">
             Happy<br>Valentine's<br>Day! 🌹
         </h1>
         <p class="text-lg text-rose-800 mt-2 opacity-0" id="wish-sub">
             You make my life beautiful.
         </p>
-        
         <button onclick="nextSection(3)" class="btn-primary mt-10 opacity-0" id="wish-btn">
             See Our Memories ➡️
         </button>
@@ -276,10 +275,11 @@
                         </p>
 
                         <p>
-                            Main chahta hoon ki humari ye kahani sirf aaj ke din tak na rahe—main ise har subah aapki chai ki chuski mein likhna chahta hoon.
+                            Jab hum saath hote hain, waqt jaise thamm sa jata hai.
                         </p>
 
-                        <p> Vaada hai mera, duniya ki bheed mein kabhi aapka haath nahi chodunga.
+                        <p>
+                            Aapki ek muskurahat mere pure din ki kamai hai. Vaada hai mera, duniya ki bheed mein kabhi aapka haath nahi chodunga.
                         </p>
 
                         <div class="pt-2 text-center">
@@ -408,7 +408,7 @@
 
         function startLetterAnimation() {
             const container = document.getElementById('petals-container');
-            const roseTypes = ['🌺','🌸']; 
+            const roseTypes = ['🌺', '🌸']; 
             
             const createPetal = () => {
                 const el = document.createElement('div');
