--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                         </p>
 
                         <p>
-                            Jab hum saath hote hain, waqt jaise thamm sa jata hai. Main chahta hoon ki humari ye kahani sirf aaj ke din tak na rahe—main ise har subah aapki chai ki chuski mein, aur har raat sitaron ki khamoshi mein likhna chahta hoon.
+                            Jab hum saath hote hain, waqt jaise thamm sa jata hai.
                         </p>
 
                         <p>
